@@ -333,10 +333,15 @@ final class BooleanScorerSupplier extends ScorerSupplier {
       requiredScoring.add(ss.get(leadCost));
     }
     if (scoreMode == ScoreMode.TOP_SCORES
-        && requiredNoScoring.isEmpty()
         && requiredScoring.size() > 1
         // Only specialize top-level conjunctions for clauses that don't have a two-phase iterator.
+        && requiredNoScoring.stream().map(Scorer::twoPhaseIterator).allMatch(Objects::isNull)
         && requiredScoring.stream().map(Scorer::twoPhaseIterator).allMatch(Objects::isNull)) {
+      // Turn all filters into scoring clauses with a score of zero, so that
+      // BlockMaxConjunctionBulkScorer is applicable.
+      for (Scorer filter : requiredNoScoring) {
+        requiredScoring.add(new ConstantScoreScorer(0f, ScoreMode.COMPLETE, filter.iterator()));
+      }
       return new BlockMaxConjunctionBulkScorer(maxDoc, requiredScoring);
     }
     if (scoreMode != ScoreMode.TOP_SCORES
